# prototype-creator

./: .gitignore  CLAUDE.md  Makefile  README.md  node_modules  package.json  pyproject.toml
.claude/: settings.json
.decisions/: decision-001-executive-summary-layout.html  decision-001-visual-direction.html  decision-002-status-grid-design.html  decision-003-evidence-viewer-layout.html  decision-004-evidence-tree-navigation.html  decision-005-ac-filter-interaction.html  decision-006-review-entry-flow.html  decision-007-review-actions.html  decision-008-appendix-navigation.html  decision-009-appendix-content-layout.html  decision-010-appendix-tab-redesign.html  decision-012-eval-journey-playwright.html  decisions.json
config/: csv-schema.yaml  decision-points.yaml  fidelity-profiles.yaml  pipeline-settings.yaml  product-overlay.yaml  publish.yaml  report-style.yaml  ux-rubric.yaml
docs/: decision-integration.md  future-initiatives.md  human-review-guide.md  phase-a-cli-workflow.md  report-hosting-options.md  skill-overlays.md
gitlab-pages/: README.md
scripts/: bootstrap-decision-kit.sh  bootstrap-usability-testing.sh  compare-andy.js  compare-ground-truth.js  compare-runs.js  eval_state.py  fetch-design-system-context.sh  fetch_rfe.py  frontmatter.py  generate-report.py  log-run.js  publish-report.sh  publish.py  render-report.js  resolve_workspace.py  score_prototype.py  submit_to_repo.py  sync-sheet.js
templates/: evaluation-report.html  report-index.html
tests/: test_frontmatter.py  test_resolve_workspace.py  test_scoring.py
(+196 files in other folders)
